# glimmer

./: .gitmodules  Makefile.am  README  com.pengaru.glimmer.json  configure.ac
src/: Makefile.am  gtk_fb.c  main.c
