AC_INIT([glimmer], [0.0], [vcaputo@pengaru.com])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])
AC_CONFIG_MACRO_DIRS([m4])
AC_PROG_CC
AM_PROG_CC_C_O
AM_PROG_AR
AC_PROG_RANLIB
AM_SILENT_RULES([yes])

PKG_CHECK_MODULES(GTK, gtk+-3.0)
LIBS="$GTK_LIBS $LIBS"
CFLAGS="$GTK_CFLAGS $CFLAGS"

PKG_CHECK_MODULES(CAIRO, cairo)
LIBS="$CAIRO_LIBS $LIBS"
CFLAGS="$CAIRO_CFLAGS $CFLAGS"

AX_PTHREAD
LIBS="$PTHREAD_LIBS $LIBS"
CFLAGS="$CFLAGS $PTHREAD_CFLAGS"
CC="$PTHREAD_CC"

AC_CONFIG_SUBDIRS([
 rototiller
])

AC_CONFIG_FILES([
 Makefile
 src/Makefile
])
AC_OUTPUT
